// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[enter] can trigger the search 1`] = `
<div
  className="form-section"
>
  <h2
    style={
      Object {
        "fontWeight": "bold",
      }
    }
  >
    Appeal Case Information
  </h2>
  Enter the Court of Appeal number you want to respond to:
  <table>
    <tbody>
      <tr>
        <td>
          LEVEL OF COURT
        </td>
        <td>
          COURT OF APPEAL FILE NO.
        </td>
        <td>
           
        </td>
      </tr>
      <tr>
        <td>
          <input
            disabled={true}
            value="Court of Appeal"
          />
        </td>
        <td>
          <input
            autoFocus={true}
            id="file-no"
            name="number.form-seven"
            onChange={[Function]}
            onKeyPress={[Function]}
            placeholder={undefined}
            readOnly={undefined}
            value="CA12345"
          />
        </td>
        <td>
          <button
            className="btn btn-primary btn-green"
            disabled={false}
            id="find-button"
            onClick={[Function]}
          >
            Find
          </button>
        </td>
        <td>
          Error message will display here when we hook it up.
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`only [enter] can trigger the search 1`] = `
<div
  className="form-section"
>
  <h2
    style={
      Object {
        "fontWeight": "bold",
      }
    }
  >
    Appeal Case Information
  </h2>
  Enter the Court of Appeal number you want to respond to:
  <table>
    <tbody>
      <tr>
        <td>
          LEVEL OF COURT
        </td>
        <td>
          COURT OF APPEAL FILE NO.
        </td>
        <td>
           
        </td>
      </tr>
      <tr>
        <td>
          <input
            disabled={true}
            value="Court of Appeal"
          />
        </td>
        <td>
          <input
            autoFocus={true}
            id="file-no"
            name="number.form-seven"
            onChange={[Function]}
            onKeyPress={[Function]}
            placeholder={undefined}
            readOnly={undefined}
            value="CA12345"
          />
        </td>
        <td>
          <button
            className="btn btn-primary btn-green"
            disabled={false}
            id="find-button"
            onClick={[Function]}
          >
            Find
          </button>
        </td>
        <td>
          Error message will display here when we hook it up.
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`sends fetched data to caller 1`] = `
<div
  className="form-section"
>
  <h2
    style={
      Object {
        "fontWeight": "bold",
      }
    }
  >
    Appeal Case Information
  </h2>
  Enter the Court of Appeal number you want to respond to:
  <table>
    <tbody>
      <tr>
        <td>
          LEVEL OF COURT
        </td>
        <td>
          COURT OF APPEAL FILE NO.
        </td>
        <td>
           
        </td>
      </tr>
      <tr>
        <td>
          <input
            disabled={true}
            value="Court of Appeal"
          />
        </td>
        <td>
          <input
            autoFocus={true}
            id="file-no"
            name="number.form-seven"
            onChange={[Function]}
            onKeyPress={[Function]}
            placeholder={undefined}
            readOnly={undefined}
            value=""
          />
        </td>
        <td>
          <button
            className="btn btn-primary btn-green"
            disabled={true}
            id="find-button"
            onClick={[Function]}
          >
            Find
          </button>
        </td>
        <td>
          Error message will display here when we hook it up.
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`should enable button for only valid entries 1`] = `
<div
  className="form-section"
>
  <h2
    style={
      Object {
        "fontWeight": "bold",
      }
    }
  >
    Appeal Case Information
  </h2>
  Enter the Court of Appeal number you want to respond to:
  <table>
    <tbody>
      <tr>
        <td>
          LEVEL OF COURT
        </td>
        <td>
          COURT OF APPEAL FILE NO.
        </td>
        <td>
           
        </td>
      </tr>
      <tr>
        <td>
          <input
            disabled={true}
            value="Court of Appeal"
          />
        </td>
        <td>
          <input
            autoFocus={true}
            id="file-no"
            name="number.form-seven"
            onChange={[Function]}
            onKeyPress={[Function]}
            placeholder={undefined}
            readOnly={undefined}
            value=""
          />
        </td>
        <td>
          <button
            className="btn btn-primary btn-green"
            disabled={true}
            id="find-button"
            onClick={[Function]}
          >
            Find
          </button>
        </td>
        <td>
          Error message will display here when we hook it up.
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
